adds images and modified index.html and styles.css

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,9 +35,6 @@
                               <a class="nav-link" href="#">services</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">services</a>
-                            </li>
-                            <li class="nav-item">
                               <a class="nav-link" href="#">pages</a>
                             </li>
                             <li class="nav-item">
@@ -83,6 +80,88 @@
 
 
         <!-- ===================================================================END BANNER================================================================ -->
+
+
+        <!-- ===================================================================START ABOUT AREA================================================================ -->
+
+          <section class="about-area">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-6 col-md-12">
+                  <div class="about-image">
+                    <img src="./images/ent.jpg" alt="About me" class="img-fluid">
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-12 about-title">
+                    <h2 class="text uppercase pt-5">
+                      <span>Let me</span>
+                      <span>introduce</span>
+                      <span>myself</span>
+                    </h2>
+                    <div class="paragraph py-4 w-75">
+                      <p class="para">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                      </p>
+                      <p class="para">
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+                      </p>
+                    </div>
+                    <button type="button" class="btn button primary-button text-uppercase">Download CV</button>
+                </div>
+              </div>
+            </div>
+          </section>
+
+
+
+
+
+        <!-- ===================================================================END ABOUT AREA================================================================ -->
+
+
+        <!-- ===================================================================START BRAND AREA================================================================ -->
+
+        <section class="brand-area">
+          <div class="container-fluid">
+              <div class="row">
+                  <div class="col-xl-6 col-lg-12 col-md-12">
+                      <div class="first-row row">
+                          <div class="col-lg-4 col-md-6 col-sm-6">
+                              <div class="single-brand">
+                                  <img src="./images/dragon.png" alt="Brand-1 ">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xl-6 col-lg-12 col-md-12">
+                      <div class="experience-area">
+                          <div class="d-flex flex-row years-area">
+                              <h2 class="p-3 years">5</h2>
+                              <h2>
+                                  <span>Years</span>
+                                  <span>Experience</span>
+                                  <span>Engineer</span>
+                              </h2>
+                          </div>
+                          <div class="d-flex flex-row flex-wrap call-area">
+                              <span><i class="fa-solid fa-envelope fa-2x"></i></span>
+                              <div class="e-mail-now">
+                                  <a href="#" class="text-uppercase h4 font-roboto">E-mail Now</a>
+                                  <span class="font-roboto py-2">palusba@gmail.com</span>
+                              </div>
+                              <div class="bg-panel"></div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+
+
+
+
+        <!-- ===================================================================END BRAND AREA================================================================ -->
+
 
         </main>
         <!-- ===================================================================END MAIN================================================================ -->
