--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,8 +7,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
         <link href="styles.css" rel="stylesheet">
-        <title>My Webpage</title>
+        <link href="responsive.css" rel="stylesheet">
+        
+        <title>BARD</title>
     </head>
     <body>
         <!-- ===================================================================START HEADER================================================================ -->
@@ -17,7 +20,7 @@
             <div class="main-menu">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                      <a class="navbar-brand" href="#"><i class="fa-brands fa-pagelines"></i></a>
+                      <a class="navbar-brand" href="#"><i class="fa-solid fa-seedling"></i></a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -158,12 +161,172 @@
       </section>
 
 
-
-
         <!-- ===================================================================END BRAND AREA================================================================ -->
 
+        <!--  ===================================================================START PROJECT AREA ===============================================================  -->
+
+        <section class="project-area">
+          <div class="container">
+              <div class="project-title pb-5">
+                  <h1 class="text-uppercase title-h1">Projects</h1>
+              </div>
+
+              <div class="button-group">
+                  <button type="button" class="active" id="btn1" data-filter="*">All</button>
+                  <button type="button" data-filter=".popular" data-filter=".popular">Popular</button>
+                  <button type="button" data-filter=".latest" data-filter=".latest">Latest</button>
+                  <button type="button" data-filter=".following">Following</button>
+                  <button type="button" data-filter=".upcoming">Upcoming</button>
+              </div>
+
+              <div class="row grid">
+                  <div class="col-lg-4 col-md-6 col-sm-12 element-item latest">
+                      <div class="our-project">
+                          <div class="img">
+                              <a class="test-popup-link" href="./images/projects/Robot_Floor_Cleaner.png">
+                                  <img src="./images/projects/Robot_Floor_Cleaner.png" alt="portfolio-1" class="img-fluid">
+                              </a>
+                          </div>
+                          <div class="title py-4">
+                              <h4 class="text-uppercase">Cleaning Robots</h4>
+                              <span class="text-secondary">Latest, Portfolio</span>
+                          </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
+                        <div class="our-project">
+                            <div class="img">
+                                <a class="test-popup-link" href="./images/projects/cipher.png">
+                                    <img src="./images/projects/cipher.png" alt="portfolio-2" class="img-fluid">
+                                </a>
+                            </div>
+                            <div class="title py-4">
+                                <h4 class="text-uppercase">Cipher</h4>
+                                <span class="text-secondary">Popular, Portfolio</span>
+                            </div>
+                        </div>
+                    </div>
+
+                      <!-- PROJECT TO ADD -->
+
+
+
+
+                  <!-- <div class="col-lg-4 col-md-6 col-sm-12 element-item popular">
+                      <div class="our-project">
+                          <div class="img">
+                              <a class="test-popup-link" href="./img/portfolio/p3.jpg">
+                                  <img src="./img/portfolio/p3.jpg" alt="portfolio-3" class="img-fluid">
+                              </a>
+                          </div>
+                          <div class="title py-4">
+                              <h4 class="text-uppercase">Female light</h4>
+                              <span class="text-secondary">Popular, Portfolio</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
+                      <div class="our-project">
+                          <div class="img">
+                              <a class="test-popup-link" href="./img/portfolio/p4.jpg">
+                                  <img src="./img/portfolio/p4.jpg" alt="portfolio-4" class="img-fluid">
+                              </a>
+                          </div>
+                          <div class="title py-4">
+                              <h4 class="text-uppercase">Fourth Air</h4>
+                              <span class="text-secondary">Upcoming, Portfolio</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12 element-item upcoming">
+                      <div class="our-project">
+                          <div class="img">
+                              <a class="test-popup-link" href="./img/portfolio/p5.jpg">
+                                  <img src="./img/portfolio/p5.jpg" alt="portfolio-5" class="img-fluid">
+                              </a>
+                          </div>
+                          <div class="title py-4">
+                              <h4 class="text-uppercase">Muliple fown</h4>
+                              <span class="text-secondary">Upcoming, Portfolio</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
+                      <div class="our-project">
+                          <div class="img">
+                              <a class="test-popup-link" href="./img/portfolio/p6.jpg">
+                                  <img src="./img/portfolio/p6.jpg" alt="portfolio-6" class="img-fluid">
+                              </a>
+                          </div>
+                          <div class="title py-4">
+                              <h4 class="text-uppercase">Together sign</h4>
+                              <span class="text-secondary">Following, Portfolio</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
+                      <div class="our-project">
+                          <div class="img">
+                              <a class="test-popup-link" href="./img/portfolio/p7.jpg">
+                                  <img src="./img/portfolio/p7.jpg" alt="portfolio-7" class="img-fluid">
+                              </a>
+                          </div>
+                          <div class="title py-4">
+                              <h4 class="text-uppercase">Green Heaven</h4>
+                              <span class="text-secondary">Following, Portfolio</span>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12 element-item following">
+                      <div class="our-project">
+                          <div class="img">
+                              <a class="test-popup-link" href="./img/portfolio/p8.jpg">
+                                  <img src="./img/portfolio/p8.jpg" alt="portfolio-8" class="img-fluid">
+                              </a>
+                          </div>
+                          <div class="title py-4">
+                              <h4 class="text-uppercase">Fly Male</h4>
+                              <span class="text-secondary">Following, Portfolio</span>
+                          </div>
+                      </div>
+                  </div> -->
+              </div>
+          </div>
+        </section>
+
+      <!--  =============================================================== END PROJECT AREA ==========================================================  -->
 
         </main>
         <!-- ===================================================================END MAIN================================================================ -->
+
+        <footer class="footer-area">
+            <div class="container">
+                <div class="">
+                    <div class="site-logo text-center py-4">
+                        <a class="navbar-brand" href="#"><i class="fa-solid fa-seedling"></i></a>
+                    </div>
+                    <div class="social text-center">
+                        <h5 class="text-uppercase">Follow me</h5>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                    <div class="copyrights text-center">
+                        <p class="para">
+                            Copyright ©2022 All rights reserved | This template is made with
+                            <a href="#"><span style="color: var(--primary-color);">Daily Tuition</span></a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- Isotope js library -->
+        <script src="./vendor/isotope.js"></script>
+
+        <!-- custom js file -->
+        <script src="./main.js"></script>
+
+
     </body>
 </html>
